<resources>
    <string name="app_name">Tip Time App</string>
    <string name="how_was_the_service">How was the service ?</string>
    <string name="anazing20">Amazing (20%)</string>
    <string name="good18">Good (18%)</string>
    <string name="okay15">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="cost_of_service">Cost of Service</string>
</resources>