<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/costOfService"
            app:layout_constraintEnd_toStartOf="@+id/costOfService"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/costOfService"
            app:srcCompat="@drawable/ic_store" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/costOfService"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toEndOf="@+id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/costOfServiceET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_service_question"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="25dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/service_question"
            app:layout_constraintEnd_toStartOf="@+id/service_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/service_question"
            app:srcCompat="@drawable/ic_service" />

        <TextView
            android:id="@+id/service_question"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/how_was_the_service"
            app:layout_constraintStart_toEndOf="@+id/icon_service_question"
            app:layout_constraintTop_toBottomOf="@+id/costOfService" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/service_question"
            app:layout_constraintTop_toBottomOf="@+id/service_question">

            <RadioButton
                android:id="@+id/amazingRadioBtn"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anazing20" />

            <RadioButton
                android:id="@+id/goodRadioBtn"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good18" />

            <RadioButton
                android:id="@+id/okayRadioBtn"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/okay15" />
        </RadioGroup>

        <ImageView
            android:id="@+id/callMade"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/roundSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/roundSwitch"
            app:srcCompat="@drawable/ic_call_made" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/roundSwitch"
            style="@style/Widget.TipTime.CompoundButton.Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/round_up_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


        <Button
            android:id="@+id/calculateBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/roundSwitch"
            app:layout_constraintTop_toBottomOf="@+id/roundSwitch" />

        <TextView
            android:id="@+id/tipAmount"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculateBtn"
            tools:text="Tip Amount: $10" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>